--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,24 @@
-.App {
-  text-align: center;
+.btn {
+position: relative !important;
+bottom:9vh !important;
+width: 20vw !important;
+font-size: 2vw ;
+left: 3vw !important;
+padding: 1vh !important;
+margin: 2px !important;
+color: black !important;
+border: 2px solid black !important;
+border-radius: 10px !important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.d-block {
+padding: 1vw;
+  /* margin-top: 5px;
+  margin-right: 50px; */ 
+} 
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.img-text {
+  position: relative;
+  bottom:37vh;
+  
 }
