--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,36 @@
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans+Caption&display=swap');
+
+body {
+  font-family: "PT Sans Caption", sans-serif !important;
+}
+
+nav {
+  height: 7vh!important;
+}
+
 .btn {
 position: relative !important;
-bottom:9vh !important;
-width: 20vw !important;
-font-size: 2vw ;
-left: 3vw !important;
+bottom:18vh !important;
+font-size: 120% !important;
+left: 8vw !important;
 padding: 1vh !important;
 margin: 2px !important;
 color: black !important;
 border: 2px solid black !important;
 border-radius: 10px !important;
-}
-
-.d-block {
-padding: 1vw;
-  /* margin-top: 5px;
-  margin-right: 50px; */ 
 } 
+
+
+/* .carousel-inner {
+padding: 1vh !important;
+
+}   */
+
+.carousel img {
+  width: 100% ;
+height: 600px !important;
+  
+}
 
 .img-text {
   position: relative;
