--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,8 @@ body {
 
 nav {
   height: 7vh!important;
+  background-color: #FAFAFA !important;
+  
 }
 
 .btn {
@@ -27,9 +29,7 @@ padding: 1vh !important;
 }   */
 
 .carousel img {
-  width: 100% ;
-height: 600px !important;
-  
+height: 80vh !important;  
 }
 
 .img-text {
