--- a/src/App.css
+++ b/src/App.css
@@ -12,16 +12,22 @@ nav {
 
 .btn {
 position: relative !important;
-bottom:18vh !important;
-font-size: 120% !important;
-left: 8vw !important;
+font-size: 20px !important; 
+left: 3vw !important;
 padding: 1vh !important;
 margin: 2px !important;
-color: black !important;
-border: 2px solid black !important;
+color: #008ea7!important;
+border: 1px solid black !important;
 border-radius: 10px !important;
+font-weight: bold !important;
+margin-top: 20px !important;
+
 } 
 
+
+/* #img2 {
+  transform: scaleX(-1);
+}  */
 
 /* .carousel-inner {
 padding: 1vh !important;
@@ -30,13 +36,22 @@ padding: 1vh !important;
 
 .carousel img {
 height: 80vh !important;  
+max-width: max-content !important;
+background-size: cover !important;
+background-repeat: no-repeat !important;
 }
 
-.img-text {
+#img-text {
   position: relative;
-  bottom:37vh;
-  
+  bottom:75vh;
+  color: #FAFAFA;
+  right: 6vw;
+  font-size: 24px;
+  text-shadow: 2px 2px 2px #000;
+  line-height: 40px;
 }
+
+
 
 
 
