--- a/src/App.css
+++ b/src/App.css
@@ -12,9 +12,9 @@ nav {
 
 .btn {
 position: relative !important;
-font-size: 20px !important; 
+font-size: 1.3rem !important; 
 left: 3vw !important;
-padding: 1vh !important;
+padding: 0.5rem !important;
 margin: 2px !important;
 color: #008ea7!important;
 border: 1px solid black !important;
@@ -43,18 +43,26 @@ background-repeat: no-repeat !important;
 
 #img-text {
   position: relative;
-  bottom:75vh;
+  bottom: 33rem;
   color: #FAFAFA;
   right: 6vw;
-  font-size: 24px;
+  font-size: 1.5rem;
   text-shadow: 2px 2px 2px #000;
   line-height: 40px;
+  margin: 10 150px;
 }
 
 
-
-
-
+@media screen and (max-width:  700px) {
+  #img-text { 
+      margin: 0 50px 0px 40px!important;
+      bottom: 50rem;
+      padding: 0 60px 0 10px;
+  }
+  html {
+    font-size: 10px !important;
+  }
+}
 
 
 
