--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,6 @@ margin-top: 20px !important;
 
 } 
 
-
 /* #img2 {
   transform: scaleX(-1);
 }  */
@@ -49,7 +48,7 @@ background-repeat: no-repeat !important;
   font-size: 1.5rem;
   text-shadow: 2px 2px 2px #000;
   line-height: 40px;
-  margin: 10 150px;
+  margin: 10px 150px;
 }
 
 
