--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,10 @@ background-repeat: no-repeat !important;
   }
 }
 
+.card:hover{
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
 #nurse-kind-cards {
   position: relative;
   bottom:19rem;
