--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,11 @@ background-repeat: no-repeat !important;
   }
 }
 
+.row-cols-1 > * {
+  flex: 0 0 100%;
+  max-width: 96% !important;
+}
+
 .card:hover{
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
