--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ nav {
 
 .btn {
 position: relative !important;
-font-size: 1.3rem !important; 
+font-size: 1.4rem !important; 
 left: 3vw !important;
 padding: 0.5rem !important;
 margin: 2px !important;
@@ -25,9 +25,9 @@ margin-top: 20px !important;
 
 } 
 
-/* #img2 {
+ #img2 {
   transform: scaleX(-1);
-}  */
+}  
 
 /* .carousel-inner {
 padding: 1vh !important;
@@ -37,16 +37,20 @@ padding: 1vh !important;
 .carousel img {
 height: 80vh !important;  
 max-width: max-content !important;
-background-size: cover !important;
-background-repeat: no-repeat !important;
+object-fit: cover!important;  
+/* object-fit SERVE PARA AJUSTAR A IMAGEM SEM ESTICAR */
+background-size: 100%!important;
+background-position: center center !important;
+
 }
 
 #img-text {
   position: relative;
-  bottom: 33rem;
+  bottom: 34rem;
   color: #FAFAFA;
-  right: 2vw;
-  font-size: 1.5rem;
+  font-weight: bold;
+  right: 4vw;
+  font-size: 1.4rem;
   text-shadow: 2px 2px 2px #000;
   line-height: 40px;
   margin: 10px 150px;
@@ -77,7 +81,6 @@ background-repeat: no-repeat !important;
 #nurse-kind-cards {
   position: relative;
   bottom:19rem;
-  
 }
 
 .title {
@@ -85,20 +88,35 @@ background-repeat: no-repeat !important;
   
 }
 
-
 .card-deck {
   justify-content: center;
-  padding: 2vh 2vw 10vh 2vw
+  padding: 2vh 0vw 10vh 2vw
 }
 .card {
   margin: 2vh 2vw;
 }
 img.card-img-top{
    padding-top: 2vh;
-
+   width: 100%;
+   height: 12vw;
+   object-fit: cover;
 }
 
+.card-body  {
+  position: relative;
+  padding-bottom: 5rem !important;
 
+ }
+
+.card-body p {
+  margin-top: 1vw;
+  justify-content: center;
+  text-align: left;
+  line-height: 1.2rem;
+ }
+ .card-title {
+   text-align: center !important;
+ }
 
 
 
