--- a/src/App.css
+++ b/src/App.css
@@ -95,11 +95,25 @@ background-position: center center !important;
 .card {
   margin: 2vh 2vw;
 }
+
+#card-img-1 {
+  padding-top: 2vh !important;
+  width: 100% !important;
+  height: 12vw !important;
+  object-fit: cover !important;
+}
+#card-img-2 {
+  padding-top: 2vh !important;
+  width: 100% !important;
+  height: 12vw !important;
+  object-fit: cover !important;
+}
+
 img.card-img-top{
-   padding-top: 2vh;
-   width: 100%;
-   height: 12vw;
-   object-fit: cover;
+  padding-top: 2vh;
+  width: 100%;
+  height: 18vw;
+  object-fit: cover;
 }
 
 .card-body  {
