--- a/src/components/Nurserie.css
+++ b/src/components/Nurserie.css
@@ -1,5 +1,6 @@
 
 .search{
+  display: contents;
   top: 5rem;
   left: 55rem;
   z-index: 11;
@@ -20,7 +21,7 @@
   width: 16rem;
   height: 2.8rem;
   position: absolute;
-  right: 0;
+  right: 31rem;
   border-radius: 20px;
   color: #212121;
   padding: 0 3rem 0 1.3rem;
