--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@ font-size: 1.4rem !important;
 left: 3vw !important;
 padding: 0.5rem !important;
 margin: 2px !important;
+background-color: white!important;
 color:#5782ad!important;
 border: 1px solid rgb(122, 116, 116) !important;
 border-radius: 10px !important;
@@ -75,8 +76,10 @@ background-position: center center !important;
     min-height: 22vh;
   }
   #nurse-kind-cards {
-    margin-top: -240px;
+    position: relative !important;
+    margin-top: -160px !important;
   }
+  
   html {
     font-size: 11px !important;
   }
