--- a/src/App.css
+++ b/src/App.css
@@ -21,14 +21,21 @@ font-size: 1.4rem !important;
 left: 3vw !important;
 padding: 0.5rem !important;
 margin: 2px !important;
-background-color: white!important;
+background-color: #FAFAFA !important;
 color:#5782ad!important;
-border: 1px solid rgb(122, 116, 116) !important;
+border: 1px solid #5782ad !important;
 border-radius: 10px !important;
 font-weight: bold !important;
 margin-top: 20px !important;
 
 } 
+.card {
+  border: 1px solid #5782ad !important;
+}
+
+.btn:hover{
+  box-shadow: 0 10px 15px 0 rgba(0,0,0,0.2) !important;
+}
 
  #img2 {
   transform: scaleX(-1);
@@ -55,10 +62,13 @@ background-position: center center !important;
   color: #FAFAFA;
   font-weight: bold;
   right: 4vw;
-  font-size: 1.4rem;
+  font-size: 1.7rem;
   text-shadow: 2px 2px 2px #000;
-  line-height: 40px;
-  margin: 10px 150px;
+  line-height: 50px;
+  margin: -10px 150px;
+}
+h1 {
+  font-size: 3rem !important;
 }
 
 
@@ -91,7 +101,7 @@ background-position: center center !important;
 }
 
 .card:hover{
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 20px 25px 0 rgba(0,0,0,0.2);
 }
 
 #nurse-kind-cards {
@@ -101,7 +111,7 @@ background-position: center center !important;
 
 .title {
   position: relative;
-  
+  align-items: center;
 }
 
 .card-deck {
@@ -119,6 +129,13 @@ background-position: center center !important;
   object-fit: cover !important;
 }
 #card-img-2 {
+  padding-top: 2vh !important;
+  width: 100% !important;
+  height: 12vw !important;
+  object-fit: cover !important;
+}
+
+#card-img-top-profile {
   padding-top: 2vh !important;
   width: 100% !important;
   height: 12vw !important;
