--- a/src/App.css
+++ b/src/App.css
@@ -165,6 +165,18 @@ img.card-img-top{
    text-align: center !important;
  }
 
+ .signup-container {
+   display: flex;
+   flex-direction: row;
+ }
+ .signup-container img{
+   width: 50vw;
+ }
+ .container-login {
+   margin-left: 5vw;
+   justify-content: center;
+ }
+
 
 
 
