--- a/src/components/Nurserie.css
+++ b/src/components/Nurserie.css
@@ -17,13 +17,13 @@
   transition: transform 0.15s linear;
 }
 .search input {
-  position: relative;
+  position: relative !important;
   background-color: #FAFAFA;
   width: 13rem;
   height: 1.6rem;
-  top: 0.9rem;
+  bottom: 2.3rem;
   position: absolute;
-  right: 32.7rem;
+  right: 12rem;
   border-radius: 20px;
   color: #212121;
   padding: 0 3rem 0 1.3rem;
@@ -39,7 +39,7 @@
   transform: scaleX(1);
 }
 .overlay {
-  position: fixed;
+  position: fixed !important;
   left: 0;
   right: 0;
   top: 0;
